# svg2png-wasm

./: .eslintrc.cjs  .gitignore  .prettierignore  .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  biome.json  bundle.js  docs.html  index.html  index.umd.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  svg2png.wasm  tsconfig.json  vitest.config.ts  webpack.config.js  xo.config.cjs
.changeset/: config.json  moody-rules-hammer.md
.github/actions/setup/: action.yml
.github/workflows/: benchmark.yml  checks.yml  deploy-site.yml  publish.yml  release.yml  update-snapshot.yml  version.yml
_app/: error.svelte-2fba0dac.js  error.svelte-9c913d33.js  error.svelte-ad5f7a9c.js  error.svelte-e210f1fb.js  error.svelte-fd5c74a2.js  start-087dd38f.js  start-146f7922.js  start-3d773e7b.js  start-847bfcf3.js  start-a150f2e5.js  start-a5f5a640.js  start-da4e2ba9.js  start-ea762af4.js  start-ec23382e.js  start-fd15d72a.js  version.json
_app/assets/: InstallCommand-3bae156c.css  worker.0ec3033b.js  worker.4d2d2212.js  worker.5e1c5168.js  worker.7d5d44b9.js  worker.90bfac3a.js  worker.912e5ea8.js  worker.c865200d.js
_app/chunks/: HighlightCodeSnippet-89559f69.js  HighlightCodeSnippet-a0320bcf.js  HighlightCodeSnippet-b47da776.js  InstallCommand-727e28bc.js  vendor-01fa4947.js  vendor-16d16a08.js  vendor-9031228e.js  vendor-e6554643.js
_app/pages/: __layout.svelte-123f5e2c.js  __layout.svelte-545b2cd0.js  __layout.svelte-584fc99e.js  __layout.svelte-667219e9.js  __layout.svelte-6b2de746.js  __layout.svelte-ffa89bf7.js  index.svelte-252d44ab.js  index.svelte-329cbb40.js  index.svelte-48e962c1.js  index.svelte-8e460b22.js  index.svelte-b18bb8f6.js  index.svelte-dad42f83.js  index.svelte-eb587bca.js  index.svelte-ebc8e939.js  index.svelte-f292372c.js
benchmark/: README.md  package.json
benchmark/src/: benchmark.ts  index.ts
docs/: 01-svg-support.md  02-getting-started.md  04-font-settings.md  __data.json  advanced-usage.json  advanced-usage.md  basic-usage.json  basic-usage.md  font-settings.json  font-settings.md  getting-started.json  index.html  svg-support.json
example/: index.cjs  index.html  index.mjs  package.json  pnpm-lock.yaml  serve.json
lib/: core.ts  index.ts  main.ts  types.ts  unpkg.ts
lib/cjs/: index.ts
lib/umd/: index.ts
site/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tsconfig.json  vite.config.ts
site/src/: app.css  app.html  custom.d.ts
src/: converter.rs  lib.rs
test/: README.md
test/browser/: core.test.ts  invalidwasm.esm.html  invalidwasm.umd.html  playwright.config.ts  snapshot.esm.html  snapshot.umd.html
test/node/: core.test.ts  index.test.ts  jest.config.cjs  main.test.ts
test/vrt/: .gitignore  index.mjs
vrt/: index.mjs
(+430 files in other folders)
