[package]
description = "resvg wrapper for svg2png wasm module"
edition = "2018"
license = "MIT"
name = "svg2png-wasm"
version = "0.1.0"
repository = "https://github.com/ssssota/svg2png-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
resvg = { version = "0.23.0", default-features = false, features = ["filter"] }
usvg = { version = "0.23.0", default-features = false, features = [ "filter", "text"] }
svgtypes = "0.9.0"

tiny-skia = "0.6.1"
wasm-bindgen = "0.2.78"

console_error_panic_hook = {version = "0.1.6", optional = true}
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

# ref. https://github.com/yisibl/resvg-js
[profile.release]
lto = true # Enable Link Time Optimization
opt-level = 3
# Setting this to 1 may improve the performance of generated code, but may be slower to compile.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
